[manager]: обновил фильтрацию по типу загрузки
