# dicom-manager/internal/api/job/get_by_dicom_id/handler.go
@@ -45,7 +45,7 @@ func New(log *zerolog.Logger, metrics observability.MetricsClient, uc usecase) *
 //	@Produce		json
 //	@Param			dicom_id			path		string			true	"ID DICOM-файла"
 //	@Param			organization_ids	query		[]int64			false	"ID организаций через запятую"				collectionFormat(csv)
-//	@Param			upload_source		query		[]string		false	"Источники загрузки DICOM через запятую"	Enums(manual,orthanc)	collectionFormat(csv)
+//	@Param			upload_source		query		[]string		false	"Источники загрузки DICOM через запятую"	Enums(manual,clinic)	collectionFormat(csv)
 //	@Success		200					{object}	GetByDicomIDOut	"Список задач"
 //	@Failure		400					{string}	string			"Некорректные фильтры."
 //	@Failure		401					{string}	string			"Требуется авторизация."
